--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 
     <div id="perso">
       <div id="post"></div>
-      <img id="img" src="src/img/face.png" />
+      <img id="img" src="src/img/characters/face.png" />
+    </div>
+
+    <div id="map">
+      <img id="mapImg" src="src/img/maps/mapTown.png" alt="">
     </div>
 
     <script src="src/js/game.js"></script>
